--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
         <span class="title">Trivia Game</span>
     </nav>
 
-
-    <!-- <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-    </div> -->
-
-    <img src="https://img.rezdy.com/PRODUCT_IMAGE/24611/hollywood-sign-view.jpg">
+    <!-- <img src="https://img.rezdy.com/PRODUCT_IMAGE/24611/hollywood-sign-view.jpg"> -->
 
 
-    <div id="carousel" class="carousel slide" data-ride="carousel">
+    <!-- <div id="carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="" src="https://placeimg.com/400/200/arch" alt="First slide">
@@ -47,7 +39,7 @@
                 <img class="" src="https://placeimg.com/400/200/arch" alt="Third slide">
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="button">
@@ -56,11 +48,11 @@
     </div>
 
 
-    <div class="fcolor">
+    <!-- <div class="fcolor">
         <footer class="footer">
             <span class="navbar-brand mb-0 h1">Trivia Game</span>
         </footer>
-    </div>
+    </div> -->
 
 </body>
 
