--- a/index.html
+++ b/index.html
@@ -9,50 +9,59 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
-
 </head>
 
 <body>
 
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar">
         <span class="title">Trivia Game</span>
     </nav>
 
-    <!-- <img src="https://img.rezdy.com/PRODUCT_IMAGE/24611/hollywood-sign-view.jpg"> -->
-
-
-    <!-- <div id="carousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="" src="https://placeimg.com/400/200/arch" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="" src="https://placeimg.com/400/200/arch" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="" src="https://placeimg.com/400/200/arch" alt="Third slide">
-            </div>
+    <div class="container">
+        <div class "main-box">
+            <h1>NBA Questions!</h1>
+            <h3 id="timer"></h3>
+            <div id="questions-container"></div>
         </div>
-    </div> -->
 
+    </div>
+    </div>
 
     <div class="button">
         <button type="button" class="btn btn-primary">True</button>
         <button type="button" class="btn btn-secondary">False</button>
     </div>
 
+    <!-- <div class="card card-default"> -->
+        <div class="card-body">
+            <!-- This span section called right-guesses is where we will be dumping the right guesses. Pay particular attention to the id called ****right-guesses***. We"ll be referencing this in the JavaScript. -->
+            <strong>Right Answer: </strong>
+            <span id="Right-guesses"></span>
 
-    <!-- <div class="fcolor">
-        <footer class="footer">
-            <span class="navbar-brand mb-0 h1">Trivia Game</span>
-        </footer>
-    </div> -->
+        </div>
+    </div>
+    <!-- <div class="card card-default"> -->
+        <div class="card-body">
+            <!-- This span section called wrong-guesses is where we will be dumping the wrong guesses. Pay particular attention to the id called ****wrong-guesses***. We"ll be referencing this in the JavaScript. -->
+            <strong>Wrong Answer: </strong>
+            <span id="Wrong-guesses"></span>
+
+        </div>
+    </div>
+
+    <!-- <div class="card card-default"> -->
+        <div class="card-body">
+            <strong>Total Questions : </strong>
+            <span id="Total Questions"></span>
+
+        </div>
+    </div>
+
+    <script src="assets/javascript/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 
 </body>
 
